[package]
name = "octofhir-fhirpath-evaluator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FHIRPath expression evaluation engine"
keywords = ["fhir", "fhirpath", "healthcare", "hl7", "parser"]
categories = ["parser-implementations", "science"]


[dependencies]
octofhir-fhirpath-core = { path = "../fhirpath-core" }
octofhir-fhirpath-ast = { path = "../fhirpath-ast" }
octofhir-fhirpath-model = { path = "../fhirpath-model", features = [] }
octofhir-fhirpath-registry = { path = "../fhirpath-registry" }
octofhir-fhirpath-diagnostics = { path = "../fhirpath-diagnostics" }
octofhir-fhirpath-parser = { path = "../fhirpath-parser" }

# Bridge support dependencies
octofhir-fhirschema = { workspace = true }
octofhir-canonical-manager = { workspace = true }

# Performance and concurrency
dashmap = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }

# Async support
tokio = { workspace = true, features = ["rt", "macros"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Legacy compatibility only - removed

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
rust_decimal = { workspace = true }
rustc-hash = { workspace = true }

[features]
default = []

[dev-dependencies]
divan = "0.1"
pretty_assertions = "1.4.1"
