[package]
name = "fhirpath-lsp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language Server Protocol implementation for FHIRPath expressions"
keywords = ["fhir", "fhirpath", "lsp", "language-server"]
categories = ["development-tools"]
publish = false  # Manual release only

[[bin]]
name = "fhirpath-lsp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# LSP core
tower-lsp = "0.20"
lsp-types = "0.97"  # Must match tower-lsp version
tokio = { workspace = true }

# FHIRPath engine (existing crates)
octofhir-fhirpath = { path = "../octofhir-fhirpath" }
octofhir-fhirschema = "0.3"

# Configuration & file watching
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9"
notify = "7.0"
notify-debouncer-full = "0.4"

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"  # Concurrent HashMap for caching
url = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
walkdir = "2.4"  # Directory traversal for file path completion

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1.4"
tokio-test = "0.4"
divan = "0.1"

[[bench]]
name = "lsp_bench"
harness = false
