[package]
name = "octofhir-fhirpath-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Parser and tokenizer for FHIRPath expressions"
keywords = ["fhir", "fhirpath", "parser", "tokenizer"]
categories = ["parser-implementations"]

[dependencies]
# Workspace crates
octofhir-fhirpath-core = { path = "../fhirpath-core" }
octofhir-fhirpath-ast = { path = "../fhirpath-ast" }
octofhir-fhirpath-diagnostics = { path = "../fhirpath-diagnostics" }

# Parser dependencies
nom = { workspace = true }
nom_locate = { workspace = true }
serde = { workspace = true, optional = true }
log = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
unicode-xid = { workspace = true }
phf = { version = "0.11", features = ["macros"] }
compact_str = "0.8"
memchr = "2.7"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = []
serde = ["dep:serde", "octofhir-fhirpath-ast/serde"]
