[package]
name = "octofhir-fhirpath"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/octofhir-fhirpath"
description = "A high-performance FHIRPath implementation in Rust with comprehensive spec compliance"
readme = "../../README.md"
keywords = ["fhir", "fhirpath", "healthcare", "hl7", "parser"]
categories = ["parser-implementations", "data-structures", "science"]
build = "build.rs"
include = [
    "src/**/*",
    "../../dist/ui/**/*",
    "../../ui/src/**/*",
    "../../ui/package.json",
    "../../ui/vite.config.ts",
    "../../ui/tsconfig.json",
    "build.rs",
    "../../specs/**/*",
    "../../tests/**/*",
    "../../benches/**/*",
    "Cargo.toml",
    "../../README.md",
    "../../LICENSE*",
    "../../CHANGELOG.md",
]
exclude = [
    "src/bin/fhirpath-bench.rs",
    "src/bin/test-coverage.rs",
    "src/bin/test-runner.rs",
]

[lib]
name = "octofhir_fhirpath"
path = "src/lib.rs"

[[bin]]
name = "octofhir-fhirpath"
path = "src/bin/octofhir_fhirpath.rs"
required-features = ["cli"]

# Development-only binaries (not published)
[[bin]]
name = "fhirpath-bench"
path = "src/bin/fhirpath-bench.rs"
required-features = ["cli", "dev-tools"]

[[bin]]
name = "test-coverage"
path = "src/bin/test-coverage.rs"
required-features = ["cli"]

[[bin]]
name = "test-runner"
path = "src/bin/test-runner.rs"

[dependencies]
# Workspace crates
octofhir-fhirpath-core = { path = "../fhirpath-core" }
octofhir-fhirpath-ast = { path = "../fhirpath-ast" }
octofhir-fhirpath-diagnostics = { path = "../fhirpath-diagnostics", features = [
    "terminal",
] }
octofhir-fhirpath-parser = { path = "../fhirpath-parser" }
octofhir-fhirpath-model = { path = "../fhirpath-model", features = [] }
octofhir-fhirpath-registry = { path = "../fhirpath-registry" }
octofhir-fhirpath-evaluator = { path = "../fhirpath-evaluator", features = [] }
octofhir-fhirpath-analyzer = { path = "../fhirpath-analyzer" }

# Core dependencies
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
octofhir-ucum = { workspace = true }
octofhir-fhir-model = { workspace = true }
octofhir-fhirschema = { workspace = true }
octofhir-canonical-manager = { workspace = true }
url = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
typed-arena = { workspace = true }
bumpalo = { workspace = true }
unicode-xid = { workspace = true }
once_cell = { workspace = true }

# Async dependencies
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# HTTP client for external profile fetching
reqwest = { workspace = true }

# CLI dependencies (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }
human-panic = { workspace = true, optional = true }
tabled = { version = "0.15", optional = true }
indicatif = { version = "0.18", optional = true }
rustyline = { workspace = true, optional = true }
dirs = { version = "5.0", optional = true }

# HTTP server dependencies (optional)
axum = { version = "0.8", features = ["macros", "multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "catch-panic"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
include_dir = { version = "0.7", optional = true }
mime_guess = { version = "2.0", optional = true }

# Development binary dependencies (for bench and tools)
env_logger = "0.11"
comfy-table = { version = "7.0", optional = true }

# Optional diagnostic dependencies
colored = { workspace = true }

[dev-dependencies]
comfy-table = "7.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
pretty_assertions = "1.4.1"
rstest = "0.26"
serde-xml-rs = "0.8"
axum-test = "17.0"

[features]
default = []
# CLI features (includes server)
cli = [
    "clap",
    "human-panic", 
    "tabled",
    "indicatif",
    "rustyline",
    "dirs",
    "axum",
    "tower",
    "tower-http", 
    "tracing",
    "tracing-subscriber",
    "uuid",
    "include_dir",
    "mime_guess"
]
# Existing features
diagnostics = ["octofhir-fhirpath-diagnostics/terminal"]
serde = []
terminal = ["octofhir-fhirpath-diagnostics/terminal"]
profiling = []
# Development-only features for binaries (not exposed in published API)
dev-tools = ["comfy-table"]
