[package]
name = "octofhir-fhirpath"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/octofhir-fhirpath"
description = "A high-performance FHIRPath implementation in Rust with comprehensive spec compliance"
readme = "../../README.md"
keywords = ["fhir", "fhirpath", "healthcare", "hl7", "parser"]
categories = ["parser-implementations", "data-structures", "science"]
include = [
    "src/**/*",
    "../../specs/**/*",
    "../../tests/**/*",
    "../../benches/**/*",
    "Cargo.toml",
    "../../README.md",
    "../../LICENSE*",
    "../../CHANGELOG.md",
]

[lib]
name = "octofhir_fhirpath"
path = "src/lib.rs"

[lints]
workspace = true


[dependencies]
# All dependencies are now internal - no more workspace crate dependencies

# FHIR model - external dependency
octofhir-fhir-model = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
nom = { workspace = true }
papaya = { workspace = true }
nom_locate = { workspace = true }
octofhir-ucum = { workspace = true }
uuid = { workspace = true }
chumsky = { version = "0.10", features = ["pratt"] }
ariadne = "0.5.1"
tabled = "0.20"

url = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
typed-arena = { workspace = true }
bumpalo = { workspace = true }
unicode-xid = { workspace = true }
once_cell = { workspace = true }
urlencoding = "2.1"
html-escape = "0.2"

# Async dependencies
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# HTTP client for external profile fetching
reqwest = { workspace = true }


# Optional diagnostic dependencies
colored = { workspace = true }

[dev-dependencies]
divan = "0.1"
pretty_assertions = "1.4.1"
rstest = "0.26"
rust_decimal_macros = "1.36"

[features]
default = []
mock-provider = [] # Include MockModelProvider for testing and development
analysis = []      # Include static analysis features
