[package]
name = "octofhir-fhirpath"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/octofhir-fhirpath"
description = "A high-performance FHIRPath implementation in Rust with comprehensive spec compliance"
readme = "../../README.md"
keywords = ["fhir", "fhirpath", "healthcare", "hl7", "parser"]
categories = ["parser-implementations", "data-structures", "science"]
include = [
    "src/**/*",
    "../../specs/**/*",
    "../../tests/**/*",
    "../../benches/**/*",
    "Cargo.toml",
    "../../README.md",
    "../../LICENSE*",
    "../../CHANGELOG.md",
]

[lib]
name = "octofhir_fhirpath"
path = "src/lib.rs"

[lints]
workspace = true


[dependencies]
octofhir-fhir-model = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
papaya = { workspace = true }
octofhir-ucum = { workspace = true }
moka = { version = "0.12", features = ["sync"] }
uuid = { workspace = true }
tracing = { workspace = true }
chumsky = { version = "0.12", features = ["pratt"] }
ariadne = "0.6"
tabled = "0.20"

url = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
urlencoding = "2.1"
html-escape = "0.2"
stacker = "0.1"

# Async dependencies
async-trait = { workspace = true }
async-recursion = "1.1"
futures = { workspace = true }
tokio = { workspace = true }

# HTTP client for external profile fetching
reqwest = { workspace = true }


# Optional diagnostic dependencies
colored = { workspace = true }

# Optional LSP dependencies
async-lsp = { version = "0.2", features = ["tokio", "tracing"], optional = true }
lsp-types = { version = "0.95", optional = true }
tower = { version = "0.5", optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
# WebSocket transport for LSP
axum = { version = "0.8", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[dev-dependencies]
divan = "0.1"
pretty_assertions = "1.4.1"
rstest = "0.26"
rust_decimal_macros = "1.36"

[features]
default = []
mock-provider = [] # Include MockModelProvider for testing and development
analysis = []      # Include static analysis features
lsp = ["dep:async-lsp", "dep:lsp-types", "dep:tower", "dep:tokio-util", "dep:axum", "dep:tower-http"] # Language Server Protocol support
